Fixes for mui dark mode

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,10 +11,10 @@
     --clr-text-on-primary: #000;
     --clr-primary: hsl(146, 57%, 54%);
     --clr-primary-hover: hsl(146, 57%, 40%);
-    --clr-primary-background-hover: hsla(0, 0%, 0%, 0.04);
+    --clr-primary-background-hover: hsla(0, 0%, 0%, 0.1);
     --clr-secondary: hsl(340, 58%, 54%);
     --clr-secondary-hover: hsl(340, 58%, 44%);
-    --clr-secondary-background-hover: hsl(340, 58%, 95%);
+    --clr-secondary-background-hover: hsla(0, 0%, 0%, 0.04);
     --clr-background-page: hsl(146, 79%, 92%);
     --clr-background-card: #fff;
 }
@@ -26,9 +26,10 @@
        --clr-text-on-primary: #000;
        --clr-primary: hsl(146, 57%, 70%);
        --clr-primary-hover: hsl(146, 57%, 60%);
-        --clr-primary-background-hover: hsl(146, 57%, 10%);
+        --clr-primary-background-hover: hsla(0, 0%, 100%, 0.1);
        --clr-secondary: hsl(340, 58%, 54%);
        --clr-secondary-dimmed: hsl(340, 58%, 44%);
+       --clr-secondary-background-hover: hsla(0, 0%, 100%, 0.04);
        --clr-background-page: #000;
        --clr-background-card: hsl(146, 57%, 10%);
    }
